[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pta-learn"
version = "0.1.0"
description = "A Python library for automated feature extraction and pattern recognition in Pressure Transient Analysis (PTA) workflows."
readme = "README.md"
authors = [
    { name = "V. Starikov", email = "starikovv98@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
keywords = ["pressure-transient-analysis", "feature-extraction", "pattern-recognition", "well-testing"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=0.24.0",
    "scikit-optimize>=0.9.0",
    "numba>=0.53.0",
    "plotly>=5.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/vitaliistarr/pta-learn"
Repository = "https://github.com/vitaliistarr/pta-learn.git"
"Bug Tracker" = "https://github.com/vitaliistarr/pta-learn/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 